# boxadm-mcp

./: CHANGELOG.md  CLAUDE.md  README.ja.md  README.md  pyproject.toml  release-please-config.json  server.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
boxadm_mcp/: __init__.py  __main__.py  client.py  config.py  oauth.py  server.py
tests/: conftest.py  test_access_events.py  test_client.py  test_config.py  test_daily_brief.py  test_enumeration.py  test_main.py  test_oauth.py  test_oauth_client.py  test_scan_concurrency.py  test_server.py
