[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "boxadm-mcp"
dynamic = ["version"]
description = "MCP server for Box admin-log analytics — external-sharing visibility, read-only"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "AIKAWA Shigechika"},
]
keywords = ["box", "mcp", "model-context-protocol", "security", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    # POSIX-only since 0.3.0: token-cache locking uses fcntl (no Windows fallback).
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
]

[project.scripts]
boxadm-mcp = "boxadm_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/shigechika/boxadm-mcp"
Repository = "https://github.com/shigechika/boxadm-mcp"
Issues = "https://github.com/shigechika/boxadm-mcp/issues"

[dependency-groups]
dev = [
    "pytest",
    "respx",
    "ruff",
]

[tool.setuptools]
packages = ["boxadm_mcp"]

[tool.setuptools.dynamic]
version = {attr = "boxadm_mcp.__version__"}

[tool.ruff]
target-version = "py310"
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
